fullstack/capstone2/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox2-deployment
  labels:
    name:  sandbox2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sandbox2
  template:
    metadata:
      labels:
        app: sandbox2
    spec:
      containers:
      - image:  sandbox2:latest
        imagePullPolicy: IfNotPresent
        name:  main-sandbox-container
        resources:
          limits:
            cpu: "500m"
            memory: "400Mi"
          requests:
            cpu: "250m"
            memory: "200Mi"
        livenessProbe:
          httpGet:
            path: /api/sandbox2/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/sandbox2/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10     
        ports:
        - containerPort:  3000
          name:  main-sandbox2
