fullstack/capstone2/k8s/sandbox-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  sandbox2-service
spec:
  selector:
    app:  sandbox2
  type:   ClusterIP 
  ports:
  - name:  main-sandbox2
    port:  80
    targetPort:  3000
